web-infras/parser/tests/fixtures/esprima/es2017/trailing-commas/invalid-empty-constructor/output.txt
[SyntaxError]: Unexpect trailing comma. (1,23)
1|class A { constructor(,) {} }
 |                     ^
